menambahkan kodingan dan form

--- a/aril.html
+++ b/aril.html
@@ -1,5 +1,141 @@
+<!DOCTYPE html>
 <html>
-    <h2>
-        saya cuma mencoba
-    </h2>
+    <head>
+        <title>
+            Aril wihh
+        </title>
+    </head>
+    <body>
+        <p>
+            selamat pagi dunia, hello world
+        </p>
+    </body>
 </html>
+
+<html>
+    <p>pengunaan tag headling</p>
+    <body>
+        <h1>ini adalah judul dengan h1</h1>
+        <h2>ini adalah judul dengan h2</h2>
+        <h3>ini adalah judul dengan h3</h3>
+        <h4>ini adalah judul dengan h4</h4>
+        <h5>ini adalah judul dengan h5</h5>
+        <h6>ini adalah judul dengan h6</h6>
+    </body>
+</html>
+
+<html>
+    <h2>1.tag paragraf</h2>
+    <body>
+        <p>ini adalah paragraf pertama</p>
+        <p>ini adalah paragraf kedua</p>
+    </body>
+</html>
+
+<html>
+    <h2>2.Tag Break</h2>
+    <body>
+        ini adalah paragraf pertama
+        <br />
+        ini adalah paragraf kedua
+    </body>
+</html>
+
+<html>
+    <h2>tag untuk penebalan dan garis miring</h2>
+
+<body>
+    <p>ini adalah kalimat <em>pertama</em>,sedangkan ini adalah kalimat <strong>kedua</strong></p>
+</body>
+</html>
+
+<html>
+    <h2>3.membuat daftar/list</h2>
+
+    <body>
+        <h1>daftar belanjaan</h1>
+        <ol>
+            <li>minyak goreng</li>
+            <li>diterjen</li>
+            <li>shampo</li>
+            <li>obat nyamuk</li>
+        </ol>
+    </body>
+</html>
+
+
+<html>
+    <h2>4.pengunaan tag list</h2>
+    <body>
+        <h1>daftar belanjaan</h1>
+        <ul>
+            <li>minyak goreng</li>
+            <li>sabun mandi</li>
+            <li>diterjen</li>
+            <li>shampo</li>
+            <li>obat nyamuk</li>
+        </ul>
+    </body>
+</html>
+
+<html>
+    <h2>5.membuat link di html</h2>
+    <body>
+        <h1>belajar tag link</h1>
+        <p>saya sedang belajar html dari</p>
+        <a href="https://unipdu.ac.id">Unipdu</a>
+    </body>
+</html>
+
+<html>
+    <h2>6.meenambahkan gambar di html</h2>
+    <body>
+        <h1>belajar tag gambar</h1>
+        <img src="stiker_sophia.png"  />
+    </body>
+</html>
+
+<html>
+    <h2>6.pengunaan tag image</h2>
+    <body>
+        <img alt="gambar mbak sophia" src="stiker_sophia.png">
+    </body>
+</html>
+
+
+<html>
+<body>
+    <h1>belajar tag gambar</h1>
+</body>
+<img alt="gambar mbak sophia" src="stiker_sophia.png" height="200" width="200">
+</html>
+
+
+<html>
+    <h2>7.membuat html dengan tag table</h2>
+    <body>
+        <table border="1"> 
+            <tr>
+                <td>baris 1, kolom 1</td>
+                <td>baris 1, kolom 2</td>
+                <td>baris 1, kolom 3</td>
+            </tr>
+            <tr>
+                <td>baris ke 2, kolom 1</td>
+                <td>baris ke 2, kolom 2</td>
+                <td>baris le 3, kolom 3</td>
+            </tr>
+            <tr>
+                <td>baris ke 3, kolom 1</td>
+                <td>baris ke 3, kolom 2</td>
+                <td>baris ke 3, kolom 3</td>
+            </tr>
+            <tr>
+                <td>baris ke 4, kolom 1</td>
+                <td>baris ke 4, kolom 2</td>
+                <td>baris ke 4, kolom 3</td>
+            </tr>
+        </table>
+    </body>
+</html>
+
